ingress/app-ingress.yaml

apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: app-ingress
  namespace: ai-station
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: ai-station-ws@kubernetes.crd
spec:
  rules:
  - host: app.aistation.io.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api 
        pathType: Prefix 
        backend:
          service:
            name: backend 
            port:
              number: 8000
